--- a/trunk/bluebox/pom.xml
+++ b/trunk/bluebox/pom.xml
@@ -94,7 +94,8 @@
 						</requires>
 						<sourceEncoding>UTF-8</sourceEncoding>
 						<group>bluebox</group>
-						<summary>Promiscuous, non-forwarding SMTP server and webmail interface for dynamic email receiving and testing</summary>
+						<summary>Promiscuous, non-forwarding SMTP server and webmail
+							interface for dynamic email receiving and testing</summary>
 						<username>tomcat</username>
 						<groupname>tomcat</groupname>
 						<mappings>
@@ -114,23 +115,33 @@
 						<preinstallScriptlet>
 							<script>
 								if [ "$1" = "1" ]; then
-								echo "Performing bluebox initial install..."
+								echo "Performing bluebox initial
+								install..."
 								echo "Set tomcat6 to start on boot"
-								/sbin/chkconfig tomcat6 on
+								/sbin/chkconfig
+								tomcat6 on
 								echo "Mapping SMTP port 25 to 2500"
-								/sbin/iptables -t nat -A PREROUTING -i eth0 -p tcp -m tcp --dport 25 -j REDIRECT --to-ports 2500
+								/sbin/iptables -t
+								nat -A PREROUTING -i eth0 -p tcp -m tcp --dport 25 -j REDIRECT
+								--to-ports 2500
 								echo "Persist across reboots"
-								/sbin/chkconfig iptables on
+								/sbin/chkconfig
+								iptables on
 								/sbin/service iptables save
 								elif [ "$1" = "2" ]; then
 								echo "Performing bluebox upgrade..."
-								echo "1/4: Shutting down tomcat"
+								echo "1/4: Shutting down
+								tomcat"
 								/sbin/service tomcat6 stop
-								echo "2/4: Shutting down MongoDB"
+								echo "2/4: Shutting down
+								MongoDB"
 								/sbin/service mongod stop
-								echo "3/4: Cleaning previous installation in ${tomcat.webapp.dir}/bluebox"
-								rm -rf ${tomcat.webapp.dir}/bluebox
-								echo "4/4: Cleaning Lucence lock file"
+								echo "3/4: Cleaning previous
+								installation in ${tomcat.webapp.dir}/bluebox"
+								rm -rf
+								${tomcat.webapp.dir}/bluebox
+								echo "4/4: Cleaning Lucence lock
+								file"
 								rm -rf /usr/share/tomcat6/temp/bluebox4.lucene/write.lock
 								fi
 								echo "Installing bluebox war file"
@@ -138,14 +149,19 @@
 						</preinstallScriptlet>
 						<postinstallScriptlet>
 							<script>
-								echo "Completed war file installation, restarting services"
+								echo "Completed war file installation, restarting
+								services"
 								if [ "$1" = "1" ]; then
-								echo "Please start the application server : service tomcat6 start"
-								elif [ "$1" = "2" ]; then
+								echo "Please start the
+								application server : service tomcat6 start"
+								elif [ "$1" = "2" ];
+								then
 								echo "Restarting tomcat to complete installation..."
-								echo "1/2: Starting MongoDB"
+								echo
+								"1/2: Starting MongoDB"
 								/sbin/service mongod start
-								echo "2/2: Starting tomcat"
+								echo "2/2:
+								Starting tomcat"
 								/sbin/service tomcat6 start
 								fi
 							</script>
@@ -304,6 +320,11 @@
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>1.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>bouncycastle</groupId>
+			<artifactId>bcprov-jdk16</artifactId>
+			<version>140</version>
 		</dependency>
 	</dependencies>
 
