--- a/trunk/bluebox/src/main/resources/bluebox.properties
+++ b/trunk/bluebox/src/main/resources/bluebox.properties
@@ -22,13 +22,13 @@ bluebox_mail_limit=100000000
 bluebox_maxconnections=500
 
 # and mails send by the following smtp servers will be rejected, comma separated list
-bluebox_smtp_blacklist=wallstreetads.org,193.104.41.200
+bluebox_smtp_blacklist=wallstreetads.org,193.104.41.200,example.com
 
 # and mails send by the following domains will be rejected, comma separated list
-bluebox_from_blacklist=blackdomain.com,wallstreetads.org
+bluebox_from_blacklist=blackdomain.com,wallstreetads.org,example.com
 
 # any mails with recipient ending in these domains will be rejected, comma separated list
-bluebox_to_blacklist=blackdomain.com,wallstreetads.org
+bluebox_to_blacklist=blackdomain.com,wallstreetads.org,example.com
 
 # comma separated domains for TO whitelist
 # specifying anything in here means ONLY mails to those domains will be accepted
